...
        floatingActionButton = {
            FloatingActionButton(
                onClick = onAddProductClick
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = "Add new product"
                )
            }
        }
    ) { innerPadding ->
        ProductListScreenContent(
            productsUiState = productsUiState,
...

        LazyColumn(
            verticalArrangement = Arrangement.spacedBy(8.dp),
            contentPadding = PaddingValues(12.dp),
            modifier = modifier
                .fillMaxSize()
                .semantics { testTag = "ProductsList" }
        ) {
            items(
                items = productsList(),
                key = { product: Product -> product.id ?: 0 }
            ) { product ->
                ProductItem(
...
